feat: introduce CLI for image processing with yargs and extract core logic to processor.js

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
           <button id="exportX1Btn">Export x1</button>
           <button id="exportX4Btn">Export x4</button>
           <button id="exportX8Btn">Export x8</button>
+          <button id="cliBtn" style="background: #e91e63; color: white;">Get CLI Command</button>
         </div>
         <button id="resetEditBtn">Delete</button>
       </div>
@@ -132,6 +133,6 @@
       <canvas id="previewCanvas"></canvas>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
